# Surround

./: README.md
SurroundClient/: CMakeLists.txt
SurroundClient/resources/: background.frag
SurroundClient/src/headers/: controller.h  game.h  menu.h  model.h  playerInfo.h  text.h  view.h  viewWindow.h  waitingRoom.h
SurroundClient/src/sources/: controller.cpp  game.cpp  main.cpp  menu.cpp  model.cpp  model.hpp  playerInfo.cpp  text.cpp  view.cpp  waitingRoom.cpp
SurroundClient/src/tests/: CMakeLists.txt  modelTest.cc  playerInfoTest.cc
SurroundServer/: CMakeLists.txt
SurroundServer/src/headers/: controller.h  model.h  player.h  playerInfo.h  view.h
SurroundServer/src/sources/: controller.cpp  main.cpp  model.cpp  player.cpp  playerInfo.cpp  view.cpp
SurroundServer/src/tests/: CMakeLists.txt  modelTest.cc  playerInfoTest.cc
